Fix mobile lines designer name styles. Still text wraps incorrectly

--- a/src/styles/mobile/components/mobile_menu_line_list.scss
+++ b/src/styles/mobile/components/mobile_menu_line_list.scss
@@ -39,11 +39,11 @@
       }
 
       .designers {
-        height: 16px;
-        margin-top: 16px;
-        font-size: 16px;
+        margin-top: 8px;
+        font-size: 20px;
         font-family: $FONT_SUBHEAD;
         text-transform: uppercase;
+        letter-spacing: -0.05em;
       }
     }
   }
